updated package.josn for heroku

--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "webassignment1a",
-  "version": "0.0.0",
+  "name": "comp229-assignment1",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
+  },
+  "engines": {
+    "node": "^12.00.0",
+    "npm": "^6.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
@@ -16,5 +20,18 @@
     "jquery": "^3.6.1",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "description": "assignment structure for assignment1",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iam-ade/COMP229-Assignment.git"
+  },
+  "author": "Oduneye Adekunle",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/iam-ade/COMP229-Assignment/issues"
+  },
+  "homepage": "https://github.com/iam-ade/COMP229-Assignment#readme"
 }
